--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
+    <link rel="icon" href="<%= BASE_URL %>icon.ico">
+    <title>
+        Passenger
+    </title>
+    <style>
+        .bottom-layer-content {
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  font-size: 12px;
+}
+</style>
+</head>
+
+<body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+        <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+                Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+    <div class="bottom-layer-content">
+        <p class="lh"><a class="text-color" href="https://beian.miit.gov.cn/" target="_blank">京ICP备2022019072号</a></p>
+
+    </div>
+</body>
+
 </html>
