二维码扫描

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,11 @@
         <p class="lh"><a class="text-color" href="https://beian.miit.gov.cn/" target="_blank">京ICP备2022019072号</a></p>
 
     </div>
+    <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
+    <script>
+        // VConsole 默认会挂载到 `window.VConsole` 上
+        var vConsole = new window.VConsole();
+    </script>
 </body>
 
 </html>
