--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
         // VConsole 默认会挂载到 `window.VConsole` 上
         var vConsole = new window.VConsole();
     </script>
+    <script src="http://www.yanhuangxueyuan.com/versions/threejsR92/build/three.js"></script>
 </body>
 
 </html>
