--- a/public/index.html
+++ b/public/index.html
@@ -31,12 +31,12 @@
         <p class="lh"><a class="text-color" href="https://beian.miit.gov.cn/" target="_blank">京ICP备2022019072号</a></p>
 
     </div>
-    <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
+    <!-- <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
     <script>
         // VConsole 默认会挂载到 `window.VConsole` 上
         var vConsole = new window.VConsole();
     </script>
-    <script src="http://www.yanhuangxueyuan.com/versions/threejsR92/build/three.js"></script>
+    <script src="http://www.yanhuangxueyuan.com/versions/threejsR92/build/three.js"></script> -->
 </body>
 
 </html>
